fixed layout bugs

--- a/src/index.scss
+++ b/src/index.scss
@@ -255,7 +255,7 @@ html {
 
 .content {
 	overflow: hidden;
-	padding-top: 140px;
+	padding-top: 180px;
 
 	&__container {
 		margin: 0 auto;
@@ -559,6 +559,10 @@ a {
 @media screen and (max-width: 1727px) {
 	.container {
 		width: 1180px;
+	}
+
+	.content {
+		padding-top: 140px;
 	}
 
 	.text {
